--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "laravel/tinker": "^2.5",
         "tcg/voyager": "^1.4"
     },
+
+    
     "require-dev": {
         "facade/ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
@@ -54,6 +56,11 @@
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
+
+        "post-install-cmd": [
+            "php artisan clear-compiled",
+            "chmod -R 777 public/"
+        ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
@@ -67,4 +74,5 @@
             "url": "https://larapack.io"
         }
     }
-}
+
+    
